ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vincalportal
  namespace: NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 90m
spec:
  tls:
    - hosts:
        - www.vincall.net
      secretName: comm100dev-io-tls
  rules:
    - host: www.vincall.net
      http:
        paths:
          - path: (.*)
            backend:
              serviceName: vincalportal
              servicePort: 80
